Fix syntax errors in base.config

--- a/base.config
+++ b/base.config
@@ -68,7 +68,7 @@ profiles {
             queue = "${params.aws_queue}"
             memory = "16 GB" // likely not enough!
             withLabel:wf_common {
-                container = "${params.aws_image_prefix}-wf-common:${params.wf.common_sha}"
+                container = "${params.aws_image_prefix}/wf-common:${params.wf.common_sha}"
             }
             shell = ['/bin/bash', '-euo', 'pipefail']
             
@@ -79,10 +79,10 @@ profiles {
                 containerOptions = "-e NVIDIA_DRIVER_CAPABILITIES=compute,utility --gpus all"
             }
             withLabel:wf_basecalling {
-                container = "${params.aws_image_prefix}-dorado:${params.wf.container_sha_basecalling}"
+                container = "${params.aws_image_prefix}/dorado:${params.wf.container_sha_basecalling}"
             }
             withLabel:wf_bonito {
-                container = "${params.aws_image_prefix}-bonito:${params.wf.bonito_sha}"
+                container = "${params.aws_image_prefix}/bonito:${params.wf.bonito_sha}"
             }
         }
     }
